fixed Emailjs issue & elements shifting with differe view height issue.

--- a/src/Componenets/Aboutme.css
+++ b/src/Componenets/Aboutme.css
@@ -6,7 +6,7 @@
 .AboutMeSec .aboutMe{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 745px;
     background: linear-gradient(45deg,#1235fe,#e6007b);
     overflow: hidden;
 }
@@ -15,7 +15,7 @@
     top: 0;
     left: -50%;
     width: 100%;
-    height: 100vh;
+    height: 745px;
 }
 .AboutMeSec .aboutMe .aboutLayer.layer1{
     background: #03a9f4;
@@ -224,7 +224,7 @@
 .mainaboutContainer{
     position: absolute;
     right: 0;
-    top:5vh;
+    top:5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -316,7 +316,7 @@
     .AboutMeSec .aboutMe{
         position: relative;
         width: 100%;
-        max-height: 150vh;
+        max-height: 1118px;
         background: linear-gradient(45deg,#1235fe,#e6007b);
         overflow: hidden;
     }
@@ -326,7 +326,7 @@
     .mainaboutContainer{
         flex-shrink: 1;
         position: absolute;
-        top:50px;
+        top:20px;
         left:5px;
         display: flex;
         justify-content: center;
@@ -339,7 +339,7 @@
     }
     .mainaboutContainer h1{
         position: absolute;
-        top: -10px;
+        top: 20px;
         color: rgb(255, 255, 255);
         right: -25px;
         font-size: 15px;
@@ -349,8 +349,14 @@
       }
       .AboutMeSec .aboutMe .aboutLayer.layer8 .BoutLoaderImg img{
         position: absolute;
-        bottom: -1820px;
-        right:-1300px;
+        bottom: -1860px;
+        right:-1310px;
         transform: skewX(-45deg) translateX(-300px) scale(0.1);
+    }
+    .mainaboutContainer .aboutTab .aboutTabContent p{
+        position: relative;
+        padding: 10px 0;
+        color: #fff;
+        font-size: 12px;
     }
 }
