--- a/src/Componenets/Footer.css
+++ b/src/Componenets/Footer.css
@@ -1,6 +1,6 @@
 .Footer{
     position: relative;
-    height: 55vh;
+    height:410px;
     width: 100vw;
     box-sizing: border-box;
     display: flex;
